backend/kubernetes/microserviceged-k8s/microserviceged-postgresql.yml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: microserviceged-postgresql
  namespace: sencookseur
spec:
  replicas: 1
  selector:
    matchLabels:
      app: microserviceged-postgresql
  template:
    metadata:
      labels:
        app: microserviceged-postgresql
    spec:
      volumes:
        - name: data
          persistentVolumeClaim:
            claimName: microserviceged-postgresql-pvc
      containers:
        - name: postgres
          image: postgres:16.1
          ports:
            - containerPort: 5432
          volumeMounts:
            - name: data
              mountPath: /var/lib/postgresql/data
              subPath: postgres
          resources:
            requests:
              memory: "512Mi"
              cpu: "500m"
            limits:
              memory: "1Gi"
              cpu: "1"
---
apiVersion: v1
kind: Service
metadata:
  name: microserviceged-postgresql
  namespace: sencookseur
spec:
  selector:
    app: microserviceged-postgresql
  ports:
    - port: 5432
