backend/kubernetes/microserviceged-k8s/microserviceged-virtual-service.yml
apiVersion: networking.istio.io/v1beta1
kind: VirtualService
metadata:
  name: microserviceged-virtualservice
  namespace: sn-ugb
spec:
  hosts:
    - microserviceged
  http:
    - route:
        - destination:
            host: microserviceged
            subset: "v1"
          weight: 100
      retries:
        attempts: 3
        perTryTimeout: 2s
